--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
-  "name": "koCut",
+  "name": "umTruncate",
   "version": "0.0.1",
   "authors": [
     "Artem I <2urnix@gmail.com>"
   ],
-  "main": "src/koCut.js",
+  "main": "src/umTruncate.js",
   "license": "MIT",
   "ignore": [
     "**/.*",
@@ -12,5 +12,8 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "angular": "~1.4.6"
+  }
 }
